# fastapi-throttling

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish.yml
src/fastapi_throttling/: __init__.py  throttle.py
tests/: conftest.py  main.py  test_app.py  test_throttle.py
