[tool.poetry]
name = "fastapi-throttling"
version = "0.1.0"
description = "Limit amount of requests to your FastAPI."
authors = ["wwnbb <wwnbb1@gmail.com>"]
license = "GPLv2"
readme = "README.md"
packages = [{include = "fastapi_throttling"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.0"
py-redis = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
