[tool.poetry]
name = "fastapi-throttling"
version = "0.1.0"
description = "Limit amount of requests to your FastAPI."
authors = ["wwnbb <wwnbb1@gmail.com>"]
license = "GPLv2"
readme = "README.md"
packages = [{include = "fastapi_throttling", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.0"
py-redis = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
httpx = "^0.24.1"
pytest-redis = "^3.0.2"
debugpy = "^1.6.7"
types-redis = "^4.5.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py311']
skip-string-normalization = true
string-normalization = false
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.stubs
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | .+/migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
ignore_missing_imports = true
python_executable = '.venv/bin/python'
mypy_path = '.stubs'

[[tool.mypy.overrides]]
module = 'app'
disallow_untyped_defs = false
no_implicit_optional = true
warn_return_any = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = 'tests'
ignore_errors = true

[[tool.mypy.overrides]]
module = "secure_t.*"
ignore_errors = true

[tool.ruff]
select = ["E", "W", "F", "C", "I"]
line-length = 88
target-version = "py311"
ignore = ["C408", "I001"]

exclude = [
    '__pycache__',
    '.env',
    '.venv',
    '.venv/*',
]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.pyright]
venvPath='./'
venv='.venv'
useLibrarySourceForTypes = true
stubPath = ".stubs"
